# qMonstatek

./: .gitignore  CMakeLists.txt  README.md  swap_bank.tcl  swap_bank2.tcl  swap_bank3.tcl  swap_bank4.tcl
.github/workflows/: build.yml
installer/: qmonstatek.iss
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/device/: device_info.h  log_model.cpp  log_model.h  m1_device.cpp  m1_device.h  screen_buffer.cpp  screen_buffer.h  screen_image_provider.cpp  screen_image_provider.h
src/backend/filemanager/: file_model.cpp  file_model.h  remote_filesystem.cpp  remote_filesystem.h
src/backend/protocol/: crc16.cpp  crc16.h  rpc_frame.cpp  rpc_frame.h  rpc_protocol.h
src/backend/transport/: device_discovery.cpp  device_discovery.h  serial_transport.cpp  serial_transport.h
src/backend/updater/: dfu_flasher.cpp  dfu_flasher.h  esp32_updater.cpp  esp32_updater.h  firmware_updater.cpp  firmware_updater.h  github_checker.cpp  github_checker.h  self_updater.cpp  self_updater.h  swd_recovery.cpp  swd_recovery.h  tool_paths.cpp  tool_paths.h
src/qml/: main.qml
src/qml/components/: DeviceSelector.qml  MonoDisplay.qml  Sidebar.qml  StatusBar.qml  VirtualButtonPad.qml
src/qml/views/: AboutView.qml  DebugTerminalView.qml  DeviceInfoView.qml  DfuFlashView.qml  DualBootView.qml  Esp32UpdateView.qml  FileManagerView.qml  FirmwareUpdateView.qml  PowerView.qml  ScreenMirrorView.qml  SettingsView.qml  SwdRecoveryView.qml
src/resources/icons/: generate_icns.sh
src/resources/linux/: qmonstatek.desktop
tools/: stm32_dfu_flash.c
